# Handin 3/Backend/docs/swagger.json
@@ -31,7 +31,7 @@
                 }
             }
         },
-        "/api/v1/sensors/air-quality/voc": {
+        "/api/v1/sensors/air-quality/tvoc": {
             "get": {
                 "description": "Gets the latest VOC measurement from the database",
                 "consumes": [
@@ -43,7 +43,7 @@
                 "tags": [
                     "GET API Endpoints"
                 ],
-                "summary": "Get latest VOC measurement",
+                "summary": "Get latest TVOC measurement",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -81,8 +81,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "204": {
+                        "description": "No Content",
                         "schema": {
                             "type": "string"
                         }
